--- a/templates/usm.ini.j2
+++ b/templates/usm.ini.j2
@@ -1,11 +1,11 @@
 [usmqepytest]
 usm_log_level = DEBUG
 usm_username = admin
-usm_password = {{ hostvars[groups['usm_server'][0]]['admin_password'].stdout }}
-usm_web_url = http://{{ groups['usm_server'][0] }}
-usm_api_url = http://{{ groups['usm_server'][0] }}/api/1.0/
-etcd_api_url = http://{{ groups['usm_server'][0] }}:2379/v2/
-graphite_api_url = http://{{ groups['usm_server'][0] }}:10080/
+usm_password = {{ hostvars[groups['tendrl-server'][0]]['admin_password'].stdout }}
+usm_web_url = http://{{ groups['tendrl-server'][0] }}
+usm_api_url = http://{{ groups['tendrl-server'][0] }}/api/1.0/
+etcd_api_url = http://{{ groups['tendrl-server'][0] }}:2379/v2/
+graphite_api_url = http://{{ groups['tendrl-server'][0] }}:10080/
 usm_ca_cert = conf/ooo_ca.crt
 usm_brick_path = /bricks/fs_gluster01/brick
 usm_gluster_role = gluster
